--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ code {
   
 }
 .heroText{
-  width: 200px;
+  width: 220px;
 }
 .heroText h1{
   font-weight: normal;
@@ -72,13 +72,13 @@ code {
 .cards{
   display: flex;
   position: absolute;
-  bottom: 100px;
-  left: 400px;
+  bottom: 50px;
+  left: 100px;
 }
 .card{
   width: 180px;
   height: 100px;
-  margin-left: 150px;
+  margin-left: 80px;
   border-radius: 28px;
   padding: 0px 15px;
   display: flex;
@@ -103,12 +103,14 @@ code {
   border-bottom-right-radius: inherit;
 }
 .card img{
-  width: 200px;
+  width: 150px;
   position: absolute;
-  left: -100px;
+  left: -50px;
+  bottom: 0;
   z-index: 8;
 }
 .card .cardText{
+  width: 50%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -119,12 +121,24 @@ code {
 margin: 2px 0px;
 }
 .cart{
-  width: 200px;
+  width: 300px;
   min-height: 100px;
+  padding: 10px;
+  z-index: 99;
   background: #fff;
   color: rgb(58, 58, 58);
   position: absolute;
-  left: -200px;
+  left: -300px;
   transition: ease-out .3s;
 
+}
+.cartItem{
+  width: 90%;
+  margin: 5px 0px;
+display: flex;
+justify-content: space-between;
+}
+.cartItem>img{
+  width: 40px;
+  height: 40px;
 }
